2008-06-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Added support for
	  project doms without project attached.

2008-06-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/Project.cs, md1format.xml: Add serialisation
	  map for UseParentDirectoryAsNamespace. Move
	  UseParentDirectoryAsNamespace from Project to DotNetProject to
	  increase consistency.

2008-06-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom/IMember.cs,
	  MonoDevelop.Projects.Dom/ExpressionResult.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs: Worked on dom.

2008-06-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/RefactorOperations.cs: Add and
	  implement API for bulk adding/implementing members at one location.
	  Avoids reparsing the file after each individual addition, so
	  increases performance substantially, and allows members to be
	  created in contiguous blocks. Also implement APIs for creating
	  folding regions, and for creating/implementing members within them.
	  Implement interfaces in folding regions.

2008-06-20  Ankit Jain  <jankit@novell.com>

	* BaseRefactorer.cs (ImplementMember): Fix emitting 'override'.
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs
	(FindOverridables): Move here from CSharpTextEditorExtension.

2008-06-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,