@@ -1,5 +1,11 @@
 2008-06-25  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
+	  MonoDevelop.Projects.Dom/ResolveResult.cs: Worked on code
+	  completion.
+
+2008-06-25  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
 	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Added support for
 	  project doms without project attached.
